feat: improve elisp source scanning and update directory exclusions
Enhanced elisp require/provide parsing to safely read and handle
various syntax forms, reducing false negatives and errors during
analysis. Modified directory exclusion logic to check all path
components, improving filtering accuracy. Added pattern to exclude
".context" directories by default. Updated README with example
results for atlas-lore usage.

--- a/README.org
+++ b/README.org
@@ -39,12 +39,18 @@ Atlas is a universal, extensible “project map” module for Emacs. It builds a
 (require 'atlas-lore)       ;; lore.el getter (optional)
 #+end_src
 
+#+RESULTS:
+: atlas-lore
+
 2) Index your current project
 #+begin_src emacs-lisp
 (let ((root default-directory))
   (atlas-index root t)       ;; full rebuild
   (atlas-stats root))        ;; => plist with counts and schema
 #+end_src
+
+#+RESULTS:
+| :files | 0 | :symbols | 0 | :edges | 0 | :t-indexed | 3.1948089599609375e-05 | :schema | 1 |
 
 3) Search (lexical)
 #+begin_src emacs-lisp
