feat: enhance atlas-export-llm with deterministic query and planning data
Refined atlas-export-llm to use atlas-query results for deterministic top
items and integrated atlas-plan-context for files, spans, token estimates,
and rationale. Improved data consistency by preferring plan data when
available and ensured stable sorting of output elements. Updated JSON export
to reflect these enriched details, boosting reliability for LLM usage.

--- a/README.org
+++ b/README.org
@@ -212,7 +212,7 @@ graph LR
   ],
   "files": ["lisp/foo.el", "lisp/foo-core.el"],
   "imports": ["feature:foo-core"],
-  "spans": [],
+  "spans": [{"file":"lisp/foo.el","beg":60,"end":220}],
   "graph": {
     "nodes": ["feature:foo-core", "lisp/foo-core.el", "lisp/foo.el"],
     "edges": [
@@ -220,8 +220,8 @@ graph LR
       {"type":"require","from":"lisp/foo.el","to":"feature:foo-core"}
     ]
   },
-  "est_tokens": 0,
-  "rationale": "brief: lexical store-based selection"
+  "est_tokens": 180,
+  "rationale": "Model=brief lexical+1hop plan under budget=1200"
 }
 #+end_src
 
