feat: enhance atlas-entity-tree with detailed symbol display and transient support
- Improved 'by-feature' view to list symbols defined in each file, sorted by position and name,
  including symbol kind, signature, and first line of documentation snippet.
- Added optional transient-based menu for entity tree actions if transient package is available,
  providing a richer, interactive command interface.
- Extended atlas-entity-tree actions menu to include search, edges, plan views, and set view,
  with fallback to simple completing-read menu when transient is unavailable.
- Introduced autoload cookies for key atlas-entity-tree commands and minor mode.
- Added convenient keybindings for search (s), edges (E), and plan (P) views within atlas-entity-tree-mode.
- Added autoload to atlas-explore commands and required atlas-entity-tree in main atlas module for UI integration.
- Minor SPEC.org text clarifications and corrections.

--- a/SPEC.org
+++ b/SPEC.org
@@ -124,7 +124,7 @@
 - Инкрементальность
   - Провайдер может работать в режимах: полный обход или ограничение списком файлов.
   - При :file REL в батче: для REL удаляются старые символы/рёбра и добавляются новые.
-  - Детектор изменений: сравнение size/mtime и опц. sha256 (если atlas-hash-content=t, файлы ≤ atlas-max-file-size).
+  - Детектор изменений: сравнение size/mtime и, при включённом atlas-hash-content, по sha256 (если atlas-hash-content=t, файлы ≤ atlas-max-file-size).
   - TTL политика: если t-indexed > atlas-index-ttl → полный прогон; иначе — changed-only на основе детектора изменений.
 
 - Асинхронность/UX
@@ -183,7 +183,7 @@
 - Интеграция с Context Navigator
 - Группы контекста
   - atlas-build-context-group ROOT query → {:files … :spans … :rationale … :est-tokens …}
-  - atlas-export-to-context GROUP → заглушка для интеграции с Navigator.
+  - atlas-export-to-context GROUP → зарезервировано для интеграции с Navigator.
 
 - Конфигурация (defgroup atlas)
 - Индексация и хранение
@@ -461,7 +461,7 @@ graph LR
   - M4 визуализацию можно развивать поверх уже доступного DOT/Mermaid.
 
 - Визуализация: Atlas Entities (дерево сущностей)
-  - Режим/буфер: major-mode =atlas-entity-tree-mode=, окно “*Atlas Entities*”.
+  - Режим/буфер: major-mode =atlas-entity-tree-mode=, окно “*Atlas Entities/”.
   - Представления: by-feature (фичи → файлы), by-kind (символы по виду), search (результаты + In/Out edges),
     imports (обзор require/provide), edges (локальная окрестность селектора), plan (файлы/спаны по запросу).
   - Команды: =atlas-entity-tree=, =atlas-entity-tree-set-view=, =atlas-entity-tree-search=,
