feat(spec): add initial v1 universal project map specification
- Introduce core IR entities: files, symbols, edges, summaries, facts
- Define schema and storage layout with stable, deterministic formats
- Specify providers contract and language profiles (Elisp, LSP)
- Include enrichment layers, clustering, and quality metrics
- Outline exports: APM v2 textual format, LLM pack, graph export
- Document UI components: entity tree, progress indicators via events
- Add scripts and nix apps for generating spec index files
- Provide detailed normative and informative specification documents
- Establish conformance levels, migration policies, and security guidelines
- Include example minimal and multi-language specification data sets
- Add comprehensive changelog entry for initial v1 specification release

--- a/README.org
+++ b/README.org
@@ -7,14 +7,14 @@
 * Overview
 Atlas is a universal, extensible project map for Emacs. It builds and uses a structured map of your project: file inventory, symbols, dependencies, fast lexical retrieval, and budget-aware context planning for tasks and LLMs.
 
-- v1 scope: Emacs Lisp projects
+** v1 scope: Emacs Lisp projects
   - Build a map (L0 files, L1 symbols, L2 require/provide edges)
   - Incremental, deterministic indexing with TTL and change detection
   - Simple, fast lexical search with a lazy in-memory inverted index
   - Context planning: minimal spans around definitions under a token budget
   - Exports: subgraphs to DOT/Mermaid; language-agnostic JSON packs for LLMs
   - Async indexing, watch-mode, progress indicator, event bus
-- Design for growth
+** Design for growth
   - Clean core + thin ports, stable alist schemas, versioned on-disk format
   - Pluggable providers (Elisp today; LSP/ctags/external later)
 
