docs: adjust README.org org-mode header formatting and options
Updated the title line to use #+title syntax instead of title, which aligns
with org-mode standards. Disabled table of contents display by changing
toc option to nil while keeping line numbering enabled. These changes
improve document rendering consistency in org-mode viewers.

--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
-title: Atlas — Universal Project Map for Emacs
+#+title: Atlas — Universal Project Map for Emacs
 #+author: Peter Kosov <11111000000@email.com>
 #+language: en
-#+options: toc:2 num:t
+#+options: toc:nil num:t
 #+startup: show2levels
 [[https://github.com/11111000000/atlas/actions/workflows/ci.yml/badge.svg][CI status]]
 
